--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Indra Prasetyo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
